style.css: fix spacing of thread OP when selected

--- a/Static/style.css
+++ b/Static/style.css
@@ -281,6 +281,7 @@ div.thread {
 
 div.post-container:target div.thread {
     display: table;
+    margin-top: 1.3ch;
 }
 
 div.post-header span.post-thread-link,
